added SEO stuff for index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khutbah Notes – Remember Every Friday Sermon</title>
+    <meta name="description" content="Record khutbahs and Islamic lectures, get AI summaries, translations, and reminders, and remember the Friday sermon and its lessons all week long, effortlessly.">
+    <link rel="canonical" href="https://khutbah-notes.com/">
+    <meta property="og:title" content="Khutbah Notes – Remember Every Friday Sermon">
+    <meta property="og:description" content="Record khutbahs and Islamic lectures, get AI summaries, translations, and reminders, and remember the Friday sermon and its lessons all week long, effortlessly.">
+    <meta property="og:url" content="https://khutbah-notes.com/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Khutbah Notes – Remember Every Friday Sermon">
+    <meta name="twitter:description" content="Record khutbahs and Islamic lectures, get AI summaries, translations, and reminders, and remember the Friday sermon and its lessons all week long, effortlessly.">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "MobileApplication",
+            "name": "Khutbah Notes",
+            "description": "Record khutbahs and Islamic lectures, get AI summaries, translations, and reminders, and remember the Friday sermon and its lessons all week long, effortlessly.",
+            "operatingSystem": "iOS",
+            "applicationCategory": "LifestyleApplication",
+            "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "USD"
+            },
+            "url": "https://khutbah-notes.com/"
+        }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&family=Amiri:wght@400;700&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
