--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,24 @@
             height: 72px;
         }
 
+        .nav-actions {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+        }
+
+        .nav-link {
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 0.95rem;
+        }
+
+        .nav-link:hover {
+            text-decoration: underline;
+            text-underline-offset: 4px;
+        }
+
         .logo {
             display: flex;
             align-items: center;
@@ -1012,7 +1030,10 @@
             <a href="#" class="logo">
                 <img src="splash_logo.png" alt="Khutbah Notes">
             </a>
-            <a href="#download" class="nav-cta">Download App</a>
+            <div class="nav-actions">
+                <a href="#download" class="nav-link">Pricing</a>
+                <a href="https://apps.apple.com/us/app/khutbah-notes-muslim-sermon/id6756526736" class="nav-cta">Download App</a>
+            </div>
         </div>
     </nav>
 
@@ -1029,7 +1050,7 @@
             <h1>Never Forget Another<br>Khutbah Again</h1>
             <p class="hero-subtitle">Record khutbahs + Islamic lectures, get smart summaries, and reflect on the message all week long.</p>
             <div class="hero-ctas">
-                <a href="#download" class="btn-primary">
+                <a href="https://apps.apple.com/us/app/khutbah-notes-muslim-sermon/id6756526736" class="btn-primary">
                     <svg viewBox="0 0 24 24" fill="currentColor" width="22" height="22">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
                     </svg>
@@ -1211,7 +1232,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#download" class="btn-primary-green">Get the App</a>
+                <a href="https://apps.apple.com/us/app/khutbah-notes-muslim-sermon/id6756526736" class="btn-primary-green">Get the App</a>
             </div>
         </div>
     </section>
@@ -1259,7 +1280,7 @@
                             Weekly reflection reminders
                         </li>
                     </ul>
-                    <a href="#" class="btn-secondary-outline">Get the App</a>
+                    <a href="https://apps.apple.com/us/app/khutbah-notes-muslim-sermon/id6756526736" class="btn-secondary-outline">Get the App</a>
                 </div>
                 <div class="pricing-card featured">
                     <div class="pricing-label">Annual</div>
@@ -1295,7 +1316,7 @@
                             Weekly reflection reminders
                         </li>
                     </ul>
-                    <a href="#" class="btn-primary-green">Get the App</a>
+                    <a href="https://apps.apple.com/us/app/khutbah-notes-muslim-sermon/id6756526736" class="btn-primary-green">Get the App</a>
                 </div>
             </div>
             <p class="pricing-disclaimer">Subscription is completed in-app after download</p>
@@ -1307,7 +1328,7 @@
         <div class="container">
             <h2>This Friday, Remember Everything</h2>
             <p>Join Muslims around the world who are finally holding onto the wisdom of their weekly khutbahs.</p>
-            <a href="#" class="btn-primary-green">
+            <a href="https://apps.apple.com/us/app/khutbah-notes-muslim-sermon/id6756526736" class="btn-primary-green">
                 <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
                     <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
                 </svg>
